<resources>
    <string name="app_name">Team mobile base android</string>
    <string name="projects">Projects</string>
    <string name="add_project">Adicionar projeto</string>
    <string name="project_photo">Foto do projeto</string>
    <string name="add_new_project">Adicionar novo projeto</string>
    <string name="name">Nome</string>
    <string name="select_photo">Selecionar foto</string>
    <string name="add">Adicionar</string>
    <string name="invalid_parameter">Parâmetro inválido</string>
    <string name="record_fail">Erro para adicionar novo projeto</string>
    <string name="record_success">Novo projeto adicionado com sucesso</string>
</resources>